[tool.poetry]
name = "estuaire"
version = "0.1.0"
description = ""
authors = ["Jean-Pascal Mercier"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
SCons = "^4.3.0"
#eikonal = {path='../eikonal'}
ipython = "^8.0.1"
dateutils = "^0.6.12"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
