[tool.poetry]
name = "estuaire"
version = "0.1.0"
description = ""
authors = ["Jean-Pascal Mercier"]
license = "MIT"

[tool.poetry.dependencies]
useis = '^0.9.0'
python = ">=3.9,<3.10"
SCons = "^4.3.0"
ipython = "^8.0.1"
dateutils = "^0.6.12"
matplotlib = "^3.5.1"
pytz = "^2021.3"
Mako = "^1.1.6"
Cython = "^0.29.28"
numpy = "1.21.5"
scipy = "^1.8.0"
eikonal = {path = 'libraries/eikonal', develop = true}
agstd = {path = 'libraries/agstd', develop = true}
tables = "^3.7.0"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
